force-app/main/default/objects/BankInfo__c/BankInfo__c.object-meta.xml
<CustomObject>
    <label>Bank Info</label>
    <nameField>
        <label>Bank Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Info</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>