force-app/main/default/objects/BankInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account owning this bank record. Required for customer/vendor payment processing.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>