force-app/main/default/objects/BankInfo__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Account ID reference from related Account record. Used for internal relationship mapping without direct editing.</description>
    <formula>Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>