force-app/main/default/objects/BankInfo__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <description>Basic bank account number (18 digit max). National format without IBAN prefix (e.g., &quot;1234567890&quot;).</description>
    <label>Bank Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>