force-app/main/default/objects/BankInfo__c/fields/BankAccountHolderName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountHolderName__c</fullName>
    <description>Exact legal name of account holder as registered with bank. Must match exactly including special characters (60 char max).</description>
    <label>Bank Account Holder Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>