force-app/main/default/objects/BankInfo__c/fields/BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountName__c</fullName>
    <description>Bank&apos;s official name for the account (60 char max). For businesses, use exact legal entity name.</description>
    <label>Bank Account Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>