force-app/main/default/objects/BankInfo__c/fields/BankAccountReferenceText__c.field-meta.xml
<CustomField>
    <fullName>BankAccountReferenceText__c</fullName>
    <description>Payment reference appearing on statements (20 char max). Typically invoice/order numbers (e.g., &quot;INV2023-456&quot;).</description>
    <label>Bank Account Reference Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>