force-app/main/default/objects/BankInfo__c/fields/BankControlKey__c.field-meta.xml
<CustomField>
    <fullName>BankControlKey__c</fullName>
    <description>2-digit bank routing validation code (e.g., German BLZ check digits).</description>
    <label>Bank Control Key</label>
    <length>2</length>
    <type>Text</type>
</CustomField>