force-app/main/default/objects/BankInfo__c/fields/BankCountry__c.field-meta.xml
<CustomField>
    <fullName>BankCountry__c</fullName>
    <description>Country where bank account is domiciled. Store as 2-letter ISO code (e.g., &quot;DE&quot;) or full name.</description>
    <label>Bank Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>