force-app/main/default/objects/BankInfo__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Legal name of financial institution including legal form (e.g., &quot;Deutsche Bank AG&quot;).</description>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>