force-app/main/default/objects/BankInfo__c/fields/BankNumber__c.field-meta.xml
<CustomField>
    <fullName>BankNumber__c</fullName>
    <description>National bank routing number (15 digit max). Format varies by country (e.g., US Routing #, UK Sort Code).</description>
    <label>Bank Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>