force-app/main/default/objects/BankInfo__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Bank branch city in postal address format. Use unabbreviated names (e.g., &quot;Frankfurt am Main&quot;).</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>