force-app/main/default/objects/BankInfo__c/fields/DirectDebitAuthorization__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates valid SEPA/national direct debit mandate exists. When checked, confirms customer authorization.</description>
    <label>Direct Debit Authorization</label>
    <type>Checkbox</type>
</CustomField>