force-app/main/default/objects/BankInfo__c/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>External system&apos;s customer identifier (255 char max). Key field for ERP integration (e.g., SAP customer code).</description>
    <externalId>true</externalId>
    <label>ERP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>