force-app/main/default/objects/BankInfo__c/fields/ERPInternalBankId__c.field-meta.xml
<CustomField>
    <fullName>ERPInternalBankId__c</fullName>
    <description>ERP&apos;s internal bank identifier (e.g., SAP house bank ID). Format specific to each ERP system.</description>
    <label>Bank Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>