force-app/main/default/objects/BankInfo__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>International Bank Account Number (34 char max). Includes country code and check digits (e.g., &quot;DE89370400440532013000&quot;).</description>
    <label>IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>