force-app/main/default/objects/BankInfo__c/fields/IBANValidFrom__c.field-meta.xml
<CustomField>
    <fullName>IBANValidFrom__c</fullName>
    <description>Date when IBAN becomes active for transactions. Must precede first payment attempt.</description>
    <label>IBAN Valid From</label>
    <type>Date</type>
</CustomField>