force-app/main/default/objects/BankInfo__c/fields/SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode__c</fullName>
    <description>SWIFT/BIC code for international transfers (8/11 char). Format: AAAA BB CC DDD (e.g., &quot;DEUTDEFF&quot;).</description>
    <label>Swift Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>