force-app/main/default/objects/BankInfo__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Start date for bank account validity period. Records become active on this date.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>