force-app/main/default/objects/BankInfo__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Expiration date for bank account validity. Records deactivate after this date.</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>