force-app/main/default/objects/BankInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ERPInternalBankId__c</columns>
    <columns>BankName__c</columns>
    <columns>BankNumber__c</columns>
    <columns>Account__c</columns>
    <columns>ERPLastSyncAt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Kaffee-Kaul Siegfried Kaul</value>
    </filters>
    <label>All</label>
</ListView>